--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,15 @@ on:
     branches:
       - "main"
 
+  pull_request:
+    types: [opened, synchronize]
+
+  print_title_of_pr:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Print Title of PR
+        run: echo The Title of your PR is ${{ github.event.pull_request.title }}
+
 jobs:
   tagged-release:
     name: "Tagged Release"
