run gh only in main branch for merged branches

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,10 @@
 name: "tagged-release"
 
 on:
-  push:
-    branches:
-      - "main"
-
   pull_request:
-    types:
-      - closed
+    branches:
+      - main
+    types: [closed]
 
 jobs:
   tagged-release:
