--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,52 +1,47 @@
-name: "tagged-release"
-
-on:
+name: tagged-release
+"on":
   pull_request:
     branches:
       - main
-    types: [closed]
-
+    types:
+      - closed
 jobs:
- deploy:
-  runs-on: ubuntu-latest
-   update-changelog:
+  deploy:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
-
       - name: Update CHANGELOG
         id: changelog
         uses: requarks/changelog-action@v1
         with:
-          token: ${{ github.token }}
-          tag: ${{ github.ref_name }}
-
+          token: "${{ github.token }}"
+          tag: "${{ github.ref_name }}"
       - name: Create Release
         uses: ncipollo/release-action@v1.12.0
         with:
           allowUpdates: true
           draft: false
           makeLatest: true
-          name: ${{ github.ref_name }}
-          body: ${{ steps.changelog.outputs.changes }}
-          token: ${{ github.token }}
-
+          name: "${{ github.ref_name }}"
+          body: "${{ steps.changelog.outputs.changes }}"
+          token: "${{ github.token }}"
       - name: Commit CHANGELOG.md
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
           branch: main
-          commit_message: 'docs: update CHANGELOG.md for ${{ github.ref_name }} [skip ci]'
+          commit_message: "docs: update CHANGELOG.md for ${{ github.ref_name }} [skip ci]"
           file_pattern: CHANGELOG.md
-   tagged-release:
-      if: github.event.pull_request.merged
-      name: "Tagged Release"
-      runs-on: "ubuntu-latest"
-      steps:
-        - name: "Create Release"
-          run: |
-            echo "${{ secrets.GITHUB_TOKEN }}"
-        - uses: "marvinpinto/action-automatic-releases@latest"
-          with:
-            repo_token: "${{ secrets.GITHUB_TOKEN }}"
-            automatic_release_tag: "${{ github.event.pull_request.title }}"
-            prerelease: false
+tagged-release:
+  if: github.event.pull_request.merged
+  name: Tagged Release
+  runs-on: ubuntu-latest
+  steps:
+    - name: Create Release
+      run: |
+        echo "${{ secrets.GITHUB_TOKEN }}"
+    - uses: marvinpinto/action-automatic-releases@latest
+      with:
+        repo_token: "${{ secrets.GITHUB_TOKEN }}"
+        automatic_release_tag: "${{ github.event.pull_request.title }}"
+        prerelease: false
