--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         uses: requarks/changelog-action@v1
         with:
           token: "${{ github.token }}"
-          tag: "${{ github.event.pull_request.title }}"
+          tag: "${{ github.ref_name }}"
       - name: Create Release
         uses: ncipollo/release-action@v1.12.0
         with:
