--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,30 +19,30 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "${{ github.event.pull_request.title }}"
           prerelease: false
-  deploy:
-    needs: tagged-release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-      - name: Update CHANGELOG
-        id: changelog
-        uses: requarks/changelog-action@v1
-        with:
-          token: "${{ github.token }}"
-          tag: "${{ github.event.pull_request.title }}"
-      - name: Create Release
-        uses: ncipollo/release-action@v1.12.0
-        with:
-          allowUpdates: true
-          draft: false
-          makeLatest: true
-          name: "${{ github.ref_name }}"
-          body: "${{ steps.changelog.outputs.changes }}"
-          token: "${{ github.token }}"
-      - name: Commit CHANGELOG.md
-        uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          branch: main
-          commit_message: "docs: update CHANGELOG.md for ${{ github.ref_name }} [skip ci]"
-          file_pattern: CHANGELOG.md
+  # deploy:
+  #   needs: tagged-release
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout Code
+  #       uses: actions/checkout@v3
+  #     - name: Update CHANGELOG
+  #       id: changelog
+  #       uses: requarks/changelog-action@v1
+  #       with:
+  #         token: "${{ github.token }}"
+  #         tag: "${{ github.event.pull_request.title }}"
+  #     - name: Create Release
+  #       uses: ncipollo/release-action@v1.12.0
+  #       with:
+  #         allowUpdates: true
+  #         draft: false
+  #         makeLatest: true
+  #         name: "${{ github.ref_name }}"
+  #         body: "${{ steps.changelog.outputs.changes }}"
+  #         token: "${{ github.token }}"
+  #     - name: Commit CHANGELOG.md
+  #       uses: stefanzweifel/git-auto-commit-action@v4
+  #       with:
+  #         branch: main
+  #         commit_message: "docs: update CHANGELOG.md for ${{ github.ref_name }} [skip ci]"
+  #         file_pattern: CHANGELOG.md
