--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,8 @@ jobs:
       - uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "${{ github.event.pull_request.title }}"
+          # automatic_release_tag: "${{ github.event.pull_request.title }}"
+          automatic_release_tag: "latest"
           prerelease: false
   # deploy:
   #   needs: tagged-release
